[package]
name = "watchmate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = { git = "https://github.com/Relm4/Relm4", tag = "v0.5.0-beta.1", features = ["libadwaita", "macros"] }
bluer = { version = "0.15.0", features = ["bluetoothd"] }
tokio = { version = "1.20.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
futures = "0.3.21"
uuid = "1.0.0"
anyhow = "1.0"
chrono = "0.4"
zip = "0.6.2"
version-compare = "0.1.0"
