[package]
name = "watchmate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = { git = "https://github.com/Relm4/Relm4", tag = "v0.5.0-beta.2", features = ["libadwaita", "macros"] }
relm4-components = { git = "https://github.com/Relm4/Relm4", tag = "v0.5.0-beta.2" }
bluer = { version = "0.15", features = ["bluetoothd"] }
tokio = { version = "1.20", features = ["rt-multi-thread", "fs"] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
futures = "0.3"
uuid = "1.1"
anyhow = "1.0"
chrono = "0.4"
zip = "0.6"
version-compare = "0.1"
mpris2-zbus = { git = "https://github.com/pop-os/mpris2-zbus" }
zbus = { version = "2.1", default-features = false, features = ["tokio"] }
log = "0.4"
env_logger = "0.8"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
