[package]
name = "infinitime"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
bluer = { version = "0.17", features = ["bluetoothd"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
uuid = "1.7"
anyhow = "1.0"
chrono = "0.4"
zip = "0.6"
log = "0.4"
version-compare = "0.1"
reqwest = { version = "0.11", features = [ "json" ], optional = true }
zbus = { version = "3.15", default-features = false, features = ["tokio"], optional = true }
mpris2-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }

[features]
default = []
freedesktop = ["dep:zbus", "dep:mpris2-zbus"]
github = ["dep:reqwest"]
