[package]
name = "watchmate"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infinitime = { path = "../infinitime", features = ["freedesktop", "github"] }
futures = "0.3"
anyhow = "1.0"
version-compare = "0.1"
log = "0.4"
env_logger = "0.11"
ashpd = { version = "0.6.8", features = ["gtk4", "tokio"], default-features = false }
relm4 = { version = "0.7.0-rc.1", features = ["libadwaita", "gnome_45"] }
relm4-components = { version = "0.7.0-rc.1" }
relm4-icons = { version = "0.7.0-alpha.2", features = [
    "arrow3-up",
    "bluetooth",
    "cross",
    "heart-filled",
    "heart-outline-thin",
    "refresh"
] }
