[package]
name = "watchmate"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infinitime = { path = "../infinitime", features = ["freedesktop", "github"] }
futures = "0.3"
anyhow = "1.0"
version-compare = "0.2"
log = "0.4"
env_logger = "0.11"
ashpd = { version = "0.9.2", features = [
    "gtk4",
    "tokio",
], default-features = false }
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_45"] }
relm4-components = { version = "0.9.1" }
relm4-icons = "0.10.0-beta.1"

[build-dependencies]
relm4-icons-build = "0.10.0-beta.1"
